<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:id="@+id/registerLinearLayout"
    tools:context=".RegisterNewPaymentActivity">

    <TextView
        android:id="@+id/paymentRegisterHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Registra una nuova spesa"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/paymentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/newpay_name" />

    <EditText
        android:id="@+id/paymentQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/newpay_quant" />

    <EditText
        android:id="@+id/paymentDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/tv_paymentSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/newpay_pagatoda"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/paymentSubjectRG"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <TextView
        android:id="@+id/tv_paymentGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/newpay_perchi"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/paymentGroupRG"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/newpay_addspesa" />

</LinearLayout>