<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_gravity="start">
        <TextView
            android:id="@+id/tv_nomePartecipante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/name_part"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorText"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tot_p"
                android:textSize="12sp"
                android:textColor="@color/colorText"/>

            <TextView
                android:id="@+id/tv_personal_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pers_am"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/colorText"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:gravity="end">

        <TextView
            android:id="@+id/tv_statsAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/s_am"
            android:textStyle="bold"
            android:textColor="@color/colorText"
            android:textSize="16sp"/>
    </LinearLayout>

</LinearLayout>

</LinearLayout>