<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbg"
    android:fillViewport="false"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".RegisterNewPaymentActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/design_default_color_secondary_variant"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <ImageView
            android:id="@+id/back_to_group_act"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:padding="8dp"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/transaction_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="6"
            android:text="@string/name_trans"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_modifyTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/modify" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="16dp">

        <EditText
            android:id="@+id/trans_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:ems="10"
            android:hint="@string/newpay_name"
            android:inputType="textPersonName"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/design_default_color_on_primary"
            android:textColorHint="@color/design_default_color_on_primary"
            android:autofillHints="" />

        <EditText
            android:id="@+id/trans_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:ems="10"
            android:hint="@string/newpay_quant"
            android:inputType="number"
            android:paddingStart="24dp"
            android:paddingEnd="0dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/design_default_color_on_primary"
            android:textColorHint="@color/design_default_color_on_primary"
            android:autofillHints="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:layout_editor_absoluteX="16dp">

        <TextView
            android:id="@+id/tv_paymentSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/newpay_pagatoda"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lv_pagatoDa"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:choiceMode="multipleChoice"
            android:minHeight="400dp"
            android:orientation="vertical"
            android:padding="8dp" />

        <TextView
            android:id="@+id/tv_paymentGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:padding="8dp"
            android:text="@string/newpay_perchi"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lv_pagatoPer"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/design_default_color_secondary_variant"
            android:choiceMode="multipleChoice"
            android:minHeight="400dp"
            android:orientation="vertical"
            android:padding="16dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>